--- a/_sass/_11_syntax-highlighting.scss
+++ b/_sass/_11_syntax-highlighting.scss
@@ -3,7 +3,7 @@
 ------------------------------------------------------------------- */
 
 .highlight {
-    background: #fff;
+    background: #e3f1c7;
     .c     { color: #998; font-style: italic } // Comment
     .err   { color: #a61717; background-color: #e3d2d2 } // Error
     .k     { font-weight: bold } // Keyword
